--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "boostrap": "^2.0.0",
+    "paypal-express-checkout-dt": "^1.2.0",
     "react": "^17.0.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-paypal-button-v2": "^2.6.3",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
